# food_out

./: .gitignore  Makefile  README.md  example.env
services/orders/: .gitignore  Cargo.toml  Dockerfile  Makefile  go.mod  go.sum  main.go
services/orders/cmd/orders/: main.go
services/orders/commands/: accept_order.go  accept_order_test.go  cancel_order.go  cancel_order_test.go  create_order.go  create_order_test.go  errors.go  mark_cooking_started.go  mark_delivery_completed.go  mark_delivery_started.go  order_ended_producer.go  order_ended_producer_moq.go  pay_for_order.go  storage.go  take_order.go  utils.go
services/orders/config/: config.go  load.go
services/orders/eventconsumers/: accept_order_consumer.go  cancel_order_consumer.go  consumed_events.proto  consumer.go  cooking_started_consumer.go  create_order_consumer.go  delivery_completed_consumer.go  delivery_started_consumer.go  events.proto  generate.go  order_payed_consumer.go  take_order_consumer.go
services/orders/eventproducers/: events.proto  order_ended_producer.go  produced_events.proto
services/orders/models/: order.go  product.go
services/orders/src/: main.rs
services/orders/src/commands/: accept_order.rs  cancel_order.rs  create_order.rs  deliver_order.rs  mark_cooking_started.rs  mark_delivery_started.rs  mod.rs  order_ended_producer.rs  order_storage.rs  pay_for_order.rs  take_order.rs
services/orders/src/domain/: error.rs  info.rs  mod.rs  (+1 more)
services/orders/storage/: fetch.go  generate.go  insert_or_update.go  order_storage.go  queries.sql  query.sql  schema.sql  sqlc.yml  utils.go
(+234 files in other folders)
