[package]
name = "orders"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
sqlx = { version = "0.8.0", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1.39.2", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
